# PDF-log-to-Dataframe-CSV

./: README.md  pdf_to_csv_git.ipynb  pyproject.toml
src/pdf_to_csv/: __main__.py  parser.py
